--- a/index.html
+++ b/index.html
@@ -7,22 +7,38 @@
     <title>TestVueJs</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script defer src="/app.js"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1>Hello Vue JS 3</h1>
     <div id="app">
+        <p>{{filteredBooks}}</p>
+        <!--atribute binding-->
+        <a v-bind:href="url">proud of her</a>
         
         <button v-on:click="age++">increase age</button>
         <button @click="age--">decrease age</button>
         <div @click="changeTitle('otbringer')">change book title</div>
         <div v-if="showBooks">
-        <h2>{{title}} - {{author}} - {{age}}</h2>
+        <ul>
+            <li v-for="book in filteredBbooks" :class="{fav: book.isFav}" @click="toggleFav(book)">
+                <img :src="book.img" :alt="book.title">
+                <h3>{{book.title}}</h3>
+                <p>{{book.author}}</p>
+            </li>
+        </ul>
         </div>
         <button @click="toggleShowBooks">
             <span v-if="showBooks"> hide books </span>
             <span v-if="!showBooks"> show books </span>
         </button>
         <div v-show="showBooks">carentley showing books</div>
+        <br>
+        <!--mouse event-->
+        <div class="box" @mouseover="handleEvent($event, 5)">mouseover</div>
+        <div class="box" @mouseleave="handleEvent">mouseleave</div>
+        <div class="box" @dblclick="handleEvent">double click</div>
+        <div class="box" @mousemove="handleMousemove">position {{x}}  {{y}}</div>
     </div>
     
 </body>
